--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
+    
       // Single Page Apps for GitHub Pages
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
@@ -58,6 +59,7 @@
         }
       })(window.location);
     </script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
